--- a/backend/src/main/resources/application-mysql.properties
+++ b/backend/src/main/resources/application-mysql.properties
@@ -1,15 +1,17 @@
-# Database Configuration - PostgreSQL for Development
-spring.datasource.url=jdbc:postgresql://localhost:5432/project_management_system
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=${DB_PASSWORD:postgres}
+# MySQL Development Configuration (Alternative)
+# To use MySQL instead of PostgreSQL for development, run with: -Dspring.profiles.active=mysql
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/project_management_system?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=12356
 
 # JPA/Hibernate Configuration
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Jackson Configuration - Handle LocalDateTime serialization
 spring.jackson.serialization.write-dates-as-timestamps=false
@@ -22,5 +24,3 @@ server.port=8080
 # API Documentation Configuration
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-
-
