--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/project_management_system
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=${DB_PASSWORD:postgres}
+spring.datasource.password=12356
 
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
