--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.3.0",
     "axios": "^1.3.4",
     "dayjs": "^1.11.13",
+    "dhtmlx-gantt": "^9.0.14",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
